--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,13 +68,13 @@ jobs:
             ports:
               - "3009:3009"
             environment:
-              - DB_HOST=${vars.DB_HOST}
-              - DB_USER=${vars.DB_USER}
-              - DB_PASSWORD=${secrets.DB_PASSWORD}
-              - DB_NAME=${vars.DB_NAME}
-              - DB_PORT=${vars.DB_PORT}
-              - JWT_SECRET=${secrets.JWT_SECRET}
-              - SERVER_PORT=${vars.SERVER_PORT}
+              - DB_HOST=${{ vars.DB_HOST }}
+              - DB_USER=${{vars.DB_USER }}
+              - DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+              - DB_NAME=${{ vars.DB_NAME }}
+              - DB_PORT=${{ vars.DB_PORT }}
+              - JWT_SECRET=${{ secrets.JWT_SECRET }}
+              - SERVER_PORT=${{ vars.SERVER_PORT }}
             volumes:
               - ./backend/uploads:/app/uploads
             networks:
@@ -86,7 +86,7 @@ jobs:
             ports:
               - "5555:5555"
             environment:
-              - VITE_API_BASE_URL=${vars.API_BASE_URL}
+              - VITE_API_BASE_URL=${{ vars.API_BASE_URL }}
               - PORT=5555
             networks:
               - app-network
